--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/breakingNewsFragment"
-        android:name="com.myapplication.fragments.BreakingNewsFragment"
+        android:name="com.myapplication.ui.fragments.BreakingNewsFragment"
         android:label="BreakingNewsFragment" >
         <action
             android:id="@+id/action_breakingNewsFragment_to_articleFragment"
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/savedNewsFragment"
-        android:name="com.myapplication.fragments.SavedNewsFragment"
+        android:name="com.myapplication.ui.fragments.SavedNewsFragment"
         android:label="SavedNewsFragment" >
         <action
             android:id="@+id/action_savedNewsFragment_to_articleFragment"
@@ -34,7 +34,7 @@
 
     <fragment
         android:id="@+id/searchNewsFragment"
-        android:name="com.myapplication.fragments.SearchNewsFragment"
+        android:name="com.myapplication.ui.fragments.SearchNewsFragment"
         android:label="SearchNewsFragment" >
         <action
             android:id="@+id/action_searchNewsFragment_to_articleFragment"
