--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/news_nav_graph"
-             app:startDestination="@id/breakingNewsFragment">
+    app:startDestination="@id/breakingNewsFragment">
 
     <fragment
         android:id="@+id/breakingNewsFragment"
@@ -47,10 +45,10 @@
 
     <fragment
         android:id="@+id/articleFragment"
-        android:name="com.myapplication.fragments.ArticleFragment"
+        android:name="com.myapplication.ui.fragments.ArticleFragment"
         android:label="ArticleFragment">
         <argument
             android:name="article"
-            app:argType="com.myapplication.models.Article" />
+            app:argType="com.myapplication.domain.models.Article" />
     </fragment>
 </navigation>
